force-app/main/default/objects/Postal_Code__c/fields/CITY__c.field-meta.xml
<CustomField>
    <fullName>CITY__c</fullName>
    <label>CITY</label>
    <length>50</length>
    <type>Text</type>
</CustomField>