force-app/main/default/objects/Postal_Code__c/fields/COUNTY__c.field-meta.xml
<CustomField>
    <fullName>COUNTY__c</fullName>
    <label>COUNTY</label>
    <length>50</length>
    <type>Text</type>
</CustomField>