force-app/main/default/objects/Postal_Code__c/fields/ZIPCITYST__c.field-meta.xml
<CustomField>
    <fullName>ZIPCITYST__c</fullName>
    <externalId>true</externalId>
    <label>ZIPCITYST</label>
    <length>60</length>
    <type>Text</type>
</CustomField>