force-app/main/default/objects/Postal_Code__c/fields/ZIPCODE__c.field-meta.xml
<CustomField>
    <fullName>ZIPCODE__c</fullName>
    <label>ZIPCODE</label>
    <length>5</length>
    <type>Text</type>
</CustomField>